src/components/ComponentIndexPage/component-index.scss
//
// Copyright IBM Corp. 2016, 2020
//
// This source code is licensed under the Apache-2.0 license found in the
// LICENSE file in the root directory of this source tree.
//
//----------------------------------------------------------------------------
// Component Index Container
//----------------------------------------------------------------------------
.component-index-container .bx--no-gutter--start {
  width: 100%;
}

//----------------------------------------------------------------------------
// Component Index Search
//----------------------------------------------------------------------------
.component-index-search {
  margin-top: 5rem;
}

.component-index-search .bx--search-input {
  border-bottom: 1px solid $ui-03;
}

// Sort
.component-index-sort-container {
  margin-bottom: $spacing-07;
  margin-top: 0;
}

.component-index-sort {
  background-color: $white-0;
  height: $spacing-09;
}

.component-index-sort .bx--list-box__field {
  background-color: $white-0;
  height: $spacing-09;
}

//----------------------------------------------------------------------------
// Component Index item
//----------------------------------------------------------------------------
.component-index-item {
  display: flex;
  flex-wrap: wrap;
  border-bottom: 1px solid $ui-03;
}

.component-index-item .component-index-item__image,
.component-index-item .component-index-item__content {
  background-color: $white-0;
  height: 11.25rem;
}

// Image
.component-index-item__image {
  display: none;

  @include carbon--breakpoint(md) {
    //672  4:3
    display: flex;
    justify-content: center;
    align-items: center;
    border-right: 1px solid $ui-03;
    // TODO: replace with appropriate aspect ratio handling
    width: 14.875rem;
  }

  @include carbon--breakpoint(lg) {
    //1056  1:1
    width: 11.25rem;
  }

  @include carbon--breakpoint(xlg) {
    //1312  4:3
    width: 14.875rem;
  }
}

@include carbon--breakpoint(md) {
  .index-image {
    // Setting this class to 100% width seems to make Gatsby's fluid
    // images work as expected. Otherwise, they're 0px wide
    width: 100%;
  }
}

// Name
.component-index-item__name {
  @include carbon--type-style('heading-01');
  color: $text-01;
}

// Description
.component-index-item__description {
  @include carbon--type-style('body-short-01');
  padding-right: $spacing-09;
  color: $text-01;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  text-overflow: ellipsis;
  overflow: hidden;
}

// Content
.component-index-item__content {
  padding: $spacing-05;
  display: flex;
  flex-direction: column;
  flex: 1;
}

// Info
.component-index-item__info {
  @include carbon--type-style('body-short-01');

  position: relative;
  margin-top: auto;
  display: flex;
  justify-content: space-between;
}

// Links
.component-index-item__links {
  display: flex;
  align-items: center;
}

// Divider
.component-index-item__divider {
  width: 1px;
  height: $spacing-05;
  background-color: $ui-03;
  margin: 0 $spacing-05;
}

// Info Tags
.component-index-item__tags {
  position: absolute;
  right: 8px;
  display: flex;
  align-items: center;
}

.component-index-item__tag--framework {
  padding-top: $spacing-02;
  padding-right: $spacing-02;
}

.component-index-item__tag--design-asset {
  padding-top: $spacing-02;
  padding-right: $spacing-02;
}

.component-index-item__tag--maintainer {
  display: none;

  @media screen and (min-width: 850px) {
    display: flex;
    @include carbon--type-style('body-short-01');
    color: $text-01;
  }
}

//----------------------------------------------------------------------------
// Component Index Not Found
//----------------------------------------------------------------------------
.component-index-not-found {
  padding-right: 5.5rem;
}

.component-index-not-found__title {
  @include carbon--type-style('productive-heading-04');

  color: $text-01;
  margin-bottom: $spacing-06;
}

.component-index-not-found__text {
  @include carbon--type-style('body-long-02');

  color: $text-01;
  margin-bottom: $spacing-06;
}

.component-index-not-found__link {
  @include carbon--type-style('body-long-02');

  margin-bottom: $spacing-06;
  padding: 0 $spacing-02 0 $spacing-02;
}

//----------------------------------------------------------------------------
// Component Index Filter
//----------------------------------------------------------------------------
.component-index-filter-container {
  margin-top: 14rem;
  padding-left: $spacing-07;
}

// Header
.component-index-filter__header {
  @include carbon--type-style('heading-01');
  color: $text-01;
  margin-bottom: $spacing-05;
}

// Filter fieldset & label
.component-index-filter__fieldset {
  padding-bottom: $spacing-05;
  margin-top: 0;
}

.component-index-filter__label {
  border-top: 1px solid $ui-03;
  padding-top: $spacing-05;
  padding-bottom: $spacing-03;
  font-size: 0.75rem;
  line-height: 1.125rem;
  letter-spacing: 0.16px;
  color: $carbon--gray-70;
  font-weight: 400;
  vertical-align: initial;
  width: 100%;
}

// Filter option
.component-index-filter__option {
  padding-bottom: $spacing-05;
}

